RESOLVED FIXED132889
REGRESSION (topContentInset): Searching through Facebook Messenger's chat causes scrolling in News Feed
https://bugs.webkit.org/show_bug.cgi?id=132889
Summary REGRESSION (topContentInset): Searching through Facebook Messenger's chat cau...
Beth Dakin
Reported 2014-05-13 15:19:09 PDT
REGRESSION (topContentInset): Searching through Facebook Messenger's chat causes scrolling in News Feed <rdar://problem/16715716>
Attachments
Patch (12.56 KB, patch)
2014-05-13 15:33 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2014-05-13 15:33:56 PDT
Simon Fraser (smfr)
Comment 2 2014-05-13 15:37:11 PDT
Comment on attachment 231412 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231412&action=review > Source/WebCore/platform/ScrollView.cpp:430 > + IntSize scrollOffset = this->scrollOffset(); > + return IntSize(scrollOffset.width(), scrollOffset.height() - headerHeight()); return scrollOffset() - IntSize(0, headerHeight) ? > Source/WebCore/platform/ScrollView.h:244 > + // scrollOffset() anchors its (0,0) point at the top end of the scolling layer. When the Page Seems odd for a comment in ScrollView.h to be talking about layers, since this is below the level of layer stuff. "at the top end" is odd too.
Beth Dakin
Comment 3 2014-05-13 17:14:58 PDT
Note You need to log in before you can comment on or make changes to this bug.